tests/test_proof/good/enums_unit.catala_en
## Article

```catala
declaration enumeration E:
  -- Case1 content integer
  -- Case2

declaration scope A:
  internal x content E
  output y content integer

scope A:
  definition x equals Case1 content 2
  definition y under condition match x with pattern
    -- Case1 of i : true
    -- Case2 : false consequence equals 2
  definition y under condition match x with pattern
    -- Case1 of i : false
    -- Case2 : true consequence equals 2
```



```catala-test-inline
$ catala Typecheck --check-invariants
[RESULT] Invariant typing_defaults checked. result: [33/33]
[RESULT] Invariant match_inversion checked. result: [2/2]
[RESULT] Invariant app_inversion checked. result: [0/0]
[RESULT] Invariant no_return_a_function checked. result: [4/4]
[RESULT] Invariant no_partial_evaluation checked. result: [0/0]
[RESULT] Invariant default_no_arrow checked. result: [5/5]
[RESULT] Typechecking successful!
```

```catala-test-inline
$ catala Proof --disable-counterexamples 
[RESULT] No errors found during the proof mode run.
```
