tests/test_proof/bad/enums_unit-overlap.catala_en
## Article

```catala
declaration enumeration E:
  -- Case1 content integer
  -- Case2

declaration scope A:
  context x content E
  context y content integer

scope A:
  definition x equals Case1 content 2
  definition y under condition match x with pattern
    -- Case1 of i : true
    -- Case2 : true consequence equals 3
  definition y under condition match x with pattern
    -- Case1 of i : false
    -- Case2 : true consequence equals 4
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] In scope "A", the variable "y" is never used anywhere; maybe it's unnecessary?

┌─⯈ tests/test_proof/bad/enums_unit-overlap.catala_en:10.11-10.12:
└──┐
10 │   context y content integer
   │           ‾
   └─ Article
[WARNING] [A.y] At least two exceptions overlap for this variable:
┌─⯈ tests/test_proof/bad/enums_unit-overlap.catala_en:10.11-10.12:
└──┐
10 │   context y content integer
   │           ‾
   └─ Article
Counterexample generation is disabled so none was generated.
```
